# scale-diffusion-mols

./: .gitignore  CLAUDE.md  ROADMAP.txt
ai_multifunctional_coatings/: mindmap.tex  research_document.tex
ai_multifunctional_coatings/deep_dive/: mindmap.tex  research_document.tex
ai_multifunctional_coatings/pitch/: pitch_document.tex  section1_technology_innovation.txt  section2_technical_objectives.txt  section3_market_opportunity.txt  (+1 more)
cloud_training_plan/: cloud_training_plan.tex
mind_map/: mindmap.tex
molssd/: pyproject.toml
molssd/configs/: defaults.yaml  geom_drugs_unconditional.yaml  qm9_unconditional.yaml
molssd/core/: __init__.py  coarsening.py  degradation.py  diffusion.py  lanczos.py  noise_schedules.py
molssd/data/: geom_drugs_loader.py  omol25_loader.py  qm9_loader.py
molssd/evaluation/: __init__.py  batched_sampling.py  metrics.py  sampling.py
molssd/models/: __init__.py  conditioning.py  egnn.py  embeddings.py  flexi_net.py
molssd/tests/: conftest.py  test_coarsening.py  test_degradation.py  test_diffusion.py  test_equivariance.py  test_lanczos.py  test_noise_schedules.py
molssd/training/: __init__.py  ema.py  losses.py  optimizers.py  trainer.py
paper_draft/: main.tex  references.bib
research_proposal/: proposal.tex
sbir/: mindmap_2.tex  research_document.tex
scripts/: evaluate.py  run_ablations.py  run_evaluation.py  sample.py  train_geom_drugs.py  train_qm9.py  validate_contributions.py
technical_whitepaper/: whitepaper.tex
theory_explainer/: what_we_created.tex
validation_results/: validation_results.json
(+12 files in other folders)
