[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "molssd"
version = "0.1.0"
description = "Molecular Scale Space Diffusion for 3D molecule generation"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torch-geometric>=2.4",
    "torch-scatter",
    "torch-sparse",
    "torch-cluster",
    "rdkit",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.15",
    "einops>=0.7",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "black", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["molssd*"]
